--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.3",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.2",
+    "express-validator": "^6.14.0",
     "mongodb": "^4.4.1",
     "mongoose": "^6.3.1",
     "nodemon": "^2.0.15",
