--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^7.0.0"
+    "passport-local-mongoose": "^7.0.0",
+    "uuid": "^8.3.2"
   }
 }
