--- a/package.json
+++ b/package.json
@@ -33,6 +33,6 @@
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.0.0",
-    "uuid": "^8.3.2"
+    "shortid": "^2.2.16"
   }
 }
